--- a/index.html
+++ b/index.html
@@ -99,13 +99,39 @@
       
     </div>
     <div class="container-fluid">
-      bye bye?
-      What is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      bye bye?
-      What is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum...
-      <!-- <div class="container-fluid"> -->
+
+      <div class="card-deck" style="padding-top: 10px;padding-bottom: 10px;">
+        <div class="card">
+          <img src="img/slider1.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Potato</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted"><button type="button" class="btn btn-info" style="float: right;">Add to Cart</button></small>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/sliger2.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Brinjal</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted"><button type="button" class="btn btn-info" style="float: right;">Add to Cart</button></small>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/slider3.jpg" height="250px" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Tomato</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted" ><button type="button" class="btn btn-info" style="float: right;">Add to Cart</button></small>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
       <footer class="footer mt-auto py-3 fixed-bottom" style="background-color: #80ED99;">   
