--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </div>
       </nav>
     <div >
+
       <div class="container-fluid">          
           
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -147,7 +148,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
               <p>
-                 
+                 ajsfklda
               </p>
               <button type="button" class="btn btn-info" style="float:right;">Add to Cart</button> 
             </div>
