--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Custome Stylesheet-->
 <link rel="stylesheet" href="css/style.css">
 <link rel="icon" href="img/r.png" type="image/png" sizes="16x16">
-    <title>Hello, world!</title>
+    <title>R Market</title>
   </head>
   <body style="padding-top: 70px;padding-bottom: 70px;">
     <!-- <main> -->
@@ -20,7 +20,7 @@
         <!-- <a class="navbar-brand" href="#">Navbar</a> -->
         <a class="navbar-brand" href="#">
             <img src="img/r.png" width="30" height="30" alt="">
-          </a>
+          </a> <b>R Market </b>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
