--- a/pages/home.html
+++ b/pages/home.html
@@ -12,28 +12,28 @@
     </section>
 
     <!-- WORLD -->
-    <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
+    <!-- <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
 
         <div data-ui-load="pages/home/items_list"
              data-o-rss="http://rss.cnn.com/rss/edition_world.rss"></div>
 
-    </section>
+    </section> -->
 
     <!-- EUROPE -->
-    <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
+    <!-- <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
 
         <div data-ui-load="pages/home/items_list"
              data-o-rss="http://rss.cnn.com/rss/edition_europe.rss"></div>
 
-    </section>
+    </section> -->
 
     <!-- TRAVEL -->
-    <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
+    <!-- <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
 
         <div data-ui-load="pages/home/items_list"
              data-o-rss="http://rss.cnn.com/rss/edition_travel.rss"></div>
 
-    </section>
+    </section> -->
 
 </div>
 <div data-ui-load="@lib/components/context_menu"
