--- a/shared/main_menu.html
+++ b/shared/main_menu.html
@@ -2,11 +2,11 @@
   <img alt="Profile Icon" src="images/profile_icon.png" draggable="false">
 </div>
 <div class="info">
-  <div class="nick">DevUser</div>
-  <div class="name">@devrocks</div>
+  <div class="nick"> UserName</div>
+  <div class="name">@Userrocks</div>
   <div class="summary">
-    <strong>123</strong> Following
-    <strong>456</strong> Followers
+    <strong>123</strong> Orders
+    <strong>Rs.456</strong> Amount Saved
   </div>
 </div>
 
@@ -20,7 +20,7 @@
   </button>
 
   <button>
-    <i class="material-icons">assignment</i>
+    <i class="material-icons">drafts</i>
     <span>Lists</span>
   </button>
 
