--- a/shared/main_menu.html
+++ b/shared/main_menu.html
@@ -21,7 +21,7 @@
 
   <button>
     <i class="material-icons">drafts</i>
-    <span>Lists</span>
+    <span>Wishlist</span>
   </button>
 
   <button>
