--- a/shared/main_menu.html
+++ b/shared/main_menu.html
@@ -20,18 +20,28 @@
   </button>
 
   <button>
+    <i class="material-icons">subscriptions</i>
+    <span>Orders</span>
+  </button>
+
+  <button>
     <i class="material-icons">drafts</i>
     <span>Wishlist</span>
   </button>
 
   <button>
-    <i class="material-icons">bookmark</i>
-    <span>Bookmarks</span>
+    <i class="material-icons">account_balance_wallet</i>
+    <span>My Wallet</span>
   </button>
 
   <button>
-    <i class="material-icons">flash_on</i>
-    <span>Moments</span>
+    <i class="material-icons">my_location</i>
+    <span>Address Book</span>
+  </button>
+
+  <button>
+    <i class="material-icons">share</i>
+    <span>Refer</span>
   </button>
 
 </div>
@@ -40,8 +50,8 @@
 
 <div class="options">
 
-  <button>
+  <!-- <button>
     <span>Settings and privacy</span>
-  </button>
+  </button> -->
 
 </div>
