--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>Farm To Market</title>
-  <meta name="description" content="HTML Progressive Web App made with zUIx.js">
+  <meta name="description" content="Made by eFayda">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
