--- a/pages/home.html
+++ b/pages/home.html
@@ -40,8 +40,8 @@
      data-ui-context="news-options-menu">
     <div data-ui-field="menu">
         <button layout="row center-left">
-            <i class="material-icons">bookmark_border</i>
-            <span>Save for later</span>
+            <i class="material-icons">shopping_cart</i>
+            <span>Add To Cart</span>
         </button>
         <button layout="row center-left">
             <i class="material-icons">share</i>
