--- a/shared/main_menu.html
+++ b/shared/main_menu.html
@@ -2,7 +2,7 @@
   <img alt="Profile Icon" src="images/profile_icon.png" draggable="false">
 </div>
 <div class="info">
-  <div class="nick"> UserName</div>
+  <div class="nick"> Welcome</div>
   <div class="name">@Userrocks</div>
   <div class="summary">
     <strong>123</strong> Orders
@@ -25,7 +25,7 @@
   </button>
 
   <button>
-    <i class="material-icons">drafts</i>
+    <i class="material-icons">bookmark_border</i>
     <span>Wishlist</span>
   </button>
 
@@ -40,6 +40,11 @@
   </button>
 
   <button>
+    <i class="material-icons">contact_support</i>
+    <span>Contact Us</span>
+  </button>
+
+  <button>
     <i class="material-icons">share</i>
     <span>Refer</span>
   </button>
@@ -50,8 +55,8 @@
 
 <div class="options">
 
-  <!-- <button>
-    <span>Settings and privacy</span>
-  </button> -->
+  <button>
+    <span>Log Out</span>
+  </button>
 
 </div>
