--- a/pages/home.html
+++ b/pages/home.html
@@ -47,21 +47,21 @@
             <i class="material-icons">share</i>
             <span>Share</span>
         </button>
-        <button layout="row center-left">
+        <!-- <button layout="row center-left">
             <i class="material-icons">open_in_new</i>
             <span>Open link</span>
-        </button>
+        </button> -->
         <button layout="row center-left">
             <i class="material-icons">not_interested</i>
             <span>Hide items from this source</span>
         </button>
-        <button layout="row center-left">
+        <!-- <button layout="row center-left">
             <i class="material-icons">thumb_up</i>
             <span>More like this</span>
         </button>
         <button layout="row center-left">
             <i class="material-icons">thumb_down</i>
             <span>Less like this</span>
-        </button>
+        </button> -->
     </div>
 </div>
