--- a/pages/home.html
+++ b/pages/home.html
@@ -6,8 +6,11 @@
     <!-- TOP STORIES -->
     <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
 
-        <div data-ui-load="pages/home/items_list"
-             data-o-rss="http://rss.cnn.com/rss/edition.rss"></div>
+        <!-- <div data-ui-load="pages/home/items_list"
+             data-o-rss="http://rss.cnn.com/rss/edition.rss"></div> -->
+
+             <div data-ui-load="pages/home/items_list"
+             data-o-rss="https://www.indiatoday.in/rss/home"></div>
 
     </section>
 
@@ -52,8 +55,8 @@
             <span>Open link</span>
         </button> -->
         <button layout="row center-left">
-            <i class="material-icons">not_interested</i>
-            <span>Hide items from this source</span>
+            <i class="material-icons">bookmark_border</i>
+            <span>Add to Wishlist</span>
         </button>
         <!-- <button layout="row center-left">
             <i class="material-icons">thumb_up</i>
