--- a/pages/home.html
+++ b/pages/home.html
@@ -9,8 +9,8 @@
         <!-- <div data-ui-load="pages/home/items_list"
              data-o-rss="http://rss.cnn.com/rss/edition.rss"></div> -->
 
-             <div data-ui-load="pages/home/items_list"
-             data-o-rss="https://www.indiatoday.in/rss/home"></div>
+             <!-- <div data-ui-load="pages/home/items_list"
+             data-o-rss="https://www.indiatoday.in/rss/home"></div> -->
 
     </section>
 
