--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -1,3 +1,4 @@
 <div class="message" self="stretch-stretch" layout="row center-center">
     <div>Notifications</div> <i class="material-icons">notifications</i>
+    Here you will get order updates.
 </div>
