--- a/shared/input_box.html
+++ b/shared/input_box.html
@@ -1,4 +1,4 @@
 <span class="input">
-    <input type="text" placeholder="Enter search terms">
+    <input type="text" placeholder="Enter Vegetable Name">
     <span></span>
 </span>
