--- a/shared/main_menu.html
+++ b/shared/main_menu.html
@@ -2,11 +2,11 @@
   <img alt="Profile Icon" src="images/profile_icon.png" draggable="false">
 </div>
 <div class="info">
-  <div class="nick"> Welcome</div>
+  <div class="nick">Welcome</div>
   <div class="name">@Userrocks</div>
   <div class="summary">
     <strong>123</strong> Orders
-    <strong>Rs.456</strong> Amount Saved
+    <strong>Rs.456</strong>Saved
   </div>
 </div>
 
@@ -34,7 +34,7 @@
     <span>My Wallet</span>
   </button>
 
-  <button>
+  <button onclick="location.href='/home'">
     <i class="material-icons">my_location</i>
     <span>Address Book</span>
   </button>
