--- a/shared/main_menu.html
+++ b/shared/main_menu.html
@@ -6,7 +6,7 @@
   <div class="name">@Userrocks</div>
   <div class="summary">
     <strong>123</strong> Orders
-    <strong>Rs.456</strong>Saved
+    <strong>Rs.456</strong> &nbsp;Saved
   </div>
 </div>
 
@@ -34,7 +34,7 @@
     <span>My Wallet</span>
   </button>
 
-  <button onclick="location.href='/home'">
+  <button>
     <i class="material-icons">my_location</i>
     <span>Address Book</span>
   </button>
