--- a/pages/home.html
+++ b/pages/home.html
@@ -6,14 +6,14 @@
     <!-- TOP STORIES -->
     <section class="content" data-ui-load="@lib/controllers/header_auto_hide" data-ui-options="options.autoHidingBars">
 
-        <div data-ui-load="pages/home/items_list"
-             data-o-rss="http://rss.cnn.com/rss/edition.rss"></div>
+        <!-- <div data-ui-load="pages/home/items_list"
+             data-o-rss="http://rss.cnn.com/rss/edition.rss"></div> -->
 
              <!-- <div data-ui-load="pages/home/items_list"
              data-o-rss="https://www.indiatoday.in/rss/home"></div> -->
 
-             <!-- <div data-ui-load="pages/home/items_list"
-             data-o-rss="https://farmtomarket1.blogspot.com/feeds/posts/default"></div> -->
+             <div data-ui-load="pages/home/items_list"
+             data-o-rss="https://feeds.feedburner.com/farmtomarket"></div>
 
              
 
