--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
              data-o-rss="https://www.indiatoday.in/rss/home"></div> -->
 
              <div data-ui-load="pages/home/items_list"
-             data-o-rss="https://feeds.feedburner.com/farmtomarket"></div>
+             data-o-rss="http://feeds.feedburner.com/Farmtomarket"></div>
 
              
 
