--- a/index.html
+++ b/index.html
@@ -1,100 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Farm To Market</title>
-  <meta name="description" content="Made by eFayda">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FTM</title>
+  </head>
+  <body class="container">
+    <h1> </h1>
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
-
-  <!-- Progressive Web App -->
-  <meta name="theme-color" content="#f5f8fa">
-  <link rel="manifest" href="manifest.json">
-
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="images/icons/desktop/android-chrome-192x192.png">
-  <link rel="icon" sizes="512x512" href="images/icons/desktop/android-chrome-512x512.png">
-
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="A zUIx website">
-  <link rel="apple-touch-icon-precomposed" href="images/icons/desktop/apple-touch-icon.png">
-  <link rel="mask-icon" href="images/icons/desktop/safari-pinned-tab.svg" color="#5bbad5">
-
-  <!-- Tile color for Windows -->
-  <meta name="msapplication-TileImage" content="images/icons/desktop/mstile-150x150.png">
-  <meta name="msapplication-TileColor" content="#ffc40d">
-
-  <!-- Place favicon.ico in the root directory -->
-  <link rel="icon" type="image/png" sizes="32x32" href="images/icons/desktop/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/icons/desktop/favicon-16x16.png">
-
-  <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
-  <!--
-  <link rel="canonical" href="http://www.example.com/">
-  -->
-
-  <!-- Material Design Icons -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-  <!-- import zUIx library (v 0.4.9-54) -->
-  <script src="js/zuix.min.js"></script>
-  <script src="js/zuix-bundler.min.js"></script>
-
-  <!-- main app script -->
-  <script src="index.js" defer></script>
-
-</head>
-<!-- load the 'header_auto_hide' on the body -->
-<body>
-
-<!-- The header with profile icon button for opening the drawer layout (side menu panel) -->
-<header data-ui-include="layout/header"
-        data-ui-options="options.headerBar"
-        data-ui-field="header-bar"></header>
-
-<main data-ui-field="pages">
-
-  <!-- HOME -->
-  <section data-ui-include="pages/home"></section>
-
-  <!-- SEARCH -->
-  <section data-ui-include="pages/search"></section>
-
-  <!-- NOTIFICATIONS -->
-  <section data-ui-include="pages/notifications"></section>
-
-  <!-- ABOUT -->
-  <section data-ui-include="pages/about" layout="column top-center"></section>
-
-  
-
-</main>
-
-<!-- The footer with toolbar buttons -->
-<footer data-ui-include="layout/footer"
-        data-ui-options="options.footerBar"
-        data-ui-field="footer-bar"></footer>
-
-<!-- The DrawerLayout for side menu panel -->
-<div data-ui-load="@lib/controllers/drawer_layout"
-     data-ui-options="options.drawerLayout"
-     class="drawer"
-     draggable="false">
-  <!-- Add Navigation Drawer content -->
-  <div data-ui-include="shared/main_menu"></div>
-</div>
-
-<noscript>
-  Turn on JavaScript to access this site content.
-</noscript>
-
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
