--- a/index.html
+++ b/index.html
@@ -11,62 +11,33 @@
     <title>FTM</title>
   </head>
   <body>
-<div class="container">
+    <!-- Just an image -->
+<nav class="navbar fixed-top navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">
+    <img src="images/icon-72x72.png" width="30" height="30" alt="">
+  </a>
+</nav>
+<div>
   <input type="checkbox" id="check">
   <label for="check">
-    <i class="fas fa-bars" id="btn"></i>
-    <i class="fas fa-times " id="cancel"></i>
+    <i class="fas fa-arrow-right" id="btn" style="z-index: 1030;"></i>
+    <i class="fas fa-times" id="cancel"></i>
   </label>
   <div class="sidebar">
   <header>Farm To Market</header>
 <ul>
-<li><a href="#"><i class="fas fa-qrcode"></i>Dashboard</a></li>
-<li><a href="#"><i class="fas fa-link"></i>Shortcuts</a></li>
-<li><a href="#"><i class="fas fa-stream"></i>Overview</a></li>
-<li><a href="#"><i class="fas fa-calendar-week"></i>Events</a></li>
-<li><a href="#"><i class="far fa-question-circle"></i>About</a></li>
-<li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
+<li><a href="#"><i class="fas fa-qrcode"></i>Profile</a></li>
+<li><a href="#"><i class="fas fa-box-open"></i>Orders</a></li>
+<li><a href="#"><i class="fas fa-bookmark"></i>Wishlist</a></li>
+<!-- <li><a href="#"><i class="fas fa-calendar-week"></i>Events</a></li> -->
+<!-- <li><a href="#"><i class="far fa-question-circle"></i>About</a></li> -->
+
 <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
+<li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
 </ul>
 </div>
 <section></section>
 </div>
-    <!-- <input type="checkbox" id="check">
-    <label for="check">
-      <i class="fas fa-bars" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i>
-    </label>
-    <div class="sidebar">
-      <header>Farm To Market</header>
-      <a href="http://www.google.com" class="active">
-        <i class="fas fa-qrcode"></i>
-        <span>Dashboard</span>
-      </a>
-      <a href="#">
-        <i class="fas fa-link"></i> 
-        <span>Shortcuts</span>
-      </a>
-      <a href="#">
-        <i class="fas fa-stream"></i>
-        <span>Overview</span>
-      </a>
-      <a href="#">
-         <i class="fas fa-calendar"></i>
-        <span>Events</span>
-      </a>
-      <a href="#">
-        <i class="far fa-question-circle"></i>
-        <span>About</span>
-      </a>
-      <a href="#">
-        <i class="fas fa-sliders-h"></i>
-        <span>Services</span>
-      </a>
-      <a href="#">
-        <i class="far fa-envelope"></i>
-        <span>Contact</span>
-      </a>
-    </div> -->
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
