--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <body>
     <!-- Just an image -->
 <nav class="navbar fixed-top navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
+  <a class="navbar-brand" href="#">
     <img src="images/icon-72x72.png" width="30" height="30" alt="">
   </a>
 </nav>
 <div>
   <input type="checkbox" id="check">
   <label for="check">
-    <i class="fas fa-arrow-right" id="btn" style="z-index: 1030;"></i>
-    <i class="fas fa-times" id="cancel"></i>
+    <i class="fas fa-arrow-right" id="btn" style="z-index: 1030;position: fixed;"></i>
+    <i class="fas fa-times" id="cancel" style="position: fixed;"></i>
   </label>
   <div class="sidebar">
   <header>Farm To Market</header>
