--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- <li><a href="#"><i class="far fa-question-circle"></i>About</a></li> -->
 
 <li><a href="#"><i class="far fa-envelope"></i>Contact</a></li>
-<li><a href="#"><i class="fas fa-sliders-h"></i>Services</a></li>
+<li><a href="#"><i class="fas fa-sign-in-alt"></i>Login/Logout</a></li>
 </ul>
 </div>
 <section></section>
