--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <div class="product-grid">
                 <div class="product-image">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo9/images/img-3.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo9/images/img-4.jpg">
+                        <img class="pic-1" src="images/products/brinjal1.jpeg">
+                        <img class="pic-2" src="images/products/brinjal2.jpeg">
                     </a>
                     <ul class="social">
                         <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
@@ -142,8 +142,8 @@
             <div class="product-grid">
                 <div class="product-image">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo9/images/img-7.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo9/images/img-8.jpg">
+                        <img class="pic-1" src="images/products/tomato1.jpeg">
+                        <img class="pic-2" src="images/products/tomato2.jpeg">
                     </a>
                     <ul class="social">
                         <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
@@ -171,7 +171,7 @@
         </div>
     </div>
 </div>
-<hr>
+ 
 </section>
  
 </div>
