--- a/index.html
+++ b/index.html
@@ -80,30 +80,30 @@
             <div class="product-grid">
                 <div class="product-image">
                     <a href="#">
-                        <img class="pic-1" src="images/products/brinjal1.jpeg">
-                        <img class="pic-2" src="images/products/brinjal2.jpeg">
+                        <img class="pic-1" style="height: 100%;width: 100%;" src="images/products/brinjal1.jpeg">
+                        <img class="pic-2"  style="height: 100%;width: 100%;" src="images/products/brinjal2.jpeg">
                     </a>
                     <ul class="social">
-                        <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+                        <!-- <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li> -->
                         <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                     <span class="product-new-label">Sale</span>
                     <span class="product-discount-label">50%</span>
                 </div>
-                <ul class="rating">
+                <!-- <ul class="rating">
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
-                </ul>
+                </ul> -->
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Men's Plain Tshirt</a></h3>
-                    <div class="price">$5.00
-                        <span>$10.00</span>
+                    <h3 class="title"><a href="#">Brinjal</a></h3>
+                    <div class="price">₹5.00
+                        <span>₹10.00</span>
                     </div>
-                    <a class="add-to-cart" href="">+ Add To Cart</a>
+                    <!-- <a class="add-to-cart" href="">+ Add To Cart</a> -->
                 </div>
             </div>
         </div>
@@ -142,30 +142,30 @@
             <div class="product-grid">
                 <div class="product-image">
                     <a href="#">
-                        <img class="pic-1" src="images/products/tomato1.jpeg">
-                        <img class="pic-2" src="images/products/tomato2.jpeg">
+                        <img class="pic-1" style="height: 100%;width: 100%;" src="images/products/tomato1.jpeg">
+                        <img class="pic-2" style="height: 100%;width: 100%;" src="images/products/tomato2.jpeg">
                     </a>
                     <ul class="social">
-                        <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+                        <!-- <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li> -->
                         <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                     <span class="product-new-label">Sale</span>
                     <span class="product-discount-label">50%</span>
                 </div>
-                <ul class="rating">
+                <!-- <ul class="rating">
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
                     <li class="fa fa-star"></li>
-                </ul>
+                </ul> -->
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Men's Plain Tshirt</a></h3>
-                    <div class="price">$5.00
-                        <span>$10.00</span>
+                    <h3 class="title"><a href="#">Tomato</a></h3>
+                    <div class="price">₹5.00
+                        <span>₹10.00</span>
                     </div>
-                    <a class="add-to-cart" href="">+ Add To Cart</a>
+                    <!-- <a class="add-to-cart" href="">+ Add To Cart</a> -->
                 </div>
             </div>
         </div>
