--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styleProduct.css">
     <link rel="icon" href="images/icon-72x72.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel='manifest' href='/manifest.json'>
+    <link rel='manifest' href='manifest.json'>
     <title>FTM</title>
   </head>
   <body>
